--- a/wwwroot/html/ChatRoomsPage.html
+++ b/wwwroot/html/ChatRoomsPage.html
@@ -7,7 +7,7 @@
 </head>
     <body> 
         <div class = "main">
-            <h1>Admin panel</h1>
+            <h1>LetsChat</h1>
         </div>
         <div class="container">
             <div class = "header">
